typescript/checker/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts.stderr
error: TS1105
 --> $DIR/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts:7:1
  |
7 | break;
  | ^^^^^^

error: TS1116
  --> $DIR/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts:11:4
   |
11 | do break TWO; while (true)
   |    ^^^^^^^^^^

error: TS1116
  --> $DIR/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts:17:9
   |
17 |         break TWO;
   |         ^^^^^^^^^^

error: TS1116
  --> $DIR/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts:24:9
   |
24 |         break THREE;
   |         ^^^^^^^^^^^^

error: TS1116
  --> $DIR/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts:30:5
   |
30 |     break FIVE;
   |     ^^^^^^^^^^^

error: TS1116
  --> $DIR/tests/conformance/statements/breakStatements/invalidDoWhileBreakStatements.ts:40:5
   |
40 |     break NINE;
   |     ^^^^^^^^^^^

